Asp change log
==============

The following is a history of changes to the Asp software, in reverse
chronological order.

Changes
-------

Version 1.2.3.0 (compiler 1.2.1.1, engine 1.2.2.0):
- Engine:
  - Added several API functions for using iterators in application functions:
    AspIsIterable, AspAt, AspAtSame, AspIteratorInsert, and AspIteratorErase.
  - Added API function AspEraseLocal to support removal of local variables used
    in application functions that use AspCall.
  - Changed the return type of the API function AspStoreLocal from AspRunResult
    to bool in order to simplify error checking in application code.
  - Fixed a bug with range iterator comparisons. Previously, two iterators on
    the same range positioned on the same value within the range would compare
    not equal. This has been fixed.
- Standalone application:
  - Fixed handling of memory allocation errors.

Version 1.2.2.1 (compiler 1.2.1.1, engine 1.2.1.0):
- Compiler:
  - Renamed the -s option (silent) to -q (quiet) to be compatible with the aspg
    command. Note that the -s option is still accepted.
- Application specification generator:
  - Added support for application specification file names that don't adhere to
    the naming rules for C variable names. Generated names based on the file
    name replace invalid characters with an underscore. To include such files,
    the name must be given as a string.
  - Added command line options -c and -s to specify the names or directories of
    output files.
  - Added some reporting. It may be squelched via the -q command line option.
- General:
  - Added options to report version (-v) and usage (-h) to commands where it
    was missing, and made the style of the output common where it wasn't.

Version 1.2.2.0 (compiler 1.2.1.0, engine 1.2.1.0):
- Engine.
  - Changed the default value of the script-callable int function's check
    parameter to False, and changed the function's behaviour in this case to